UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/Inbound_Item__c.object-meta.xml
<CustomObject>
    <description>Inbound item object created for SMB team</description>
    <label>Inbound Item</label>
    <nameField>
        <displayFormat>INB-{00000000}</displayFormat>
        <label>Inbound Tracker#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>