UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <inlineHelpText>Valid ANI format is (###-###-####)</inlineHelpText>
    <label>ANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>