UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Available_BB_products_to_offer__c.field-meta.xml
<CustomField>
    <fullName>Available_BB_products_to_offer__c</fullName>
    <label>Available BB products to offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB Upgrade</fullName>
            </value>
            <value>
                <fullName>Copper BB</fullName>
            </value>
            <value>
                <fullName>FIOS BB</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Vantage BB</fullName>
                <isActive>false</isActive>
                <label>Vantage BB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>