UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/BB_Products_I_Issued_On_The_Order__c.field-meta.xml
<CustomField>
    <fullName>BB_Products_I_Issued_On_The_Order__c</fullName>
    <label>BB Products I Issued On The Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BroadBand Upgrade – Exist. Customer</fullName>
            </value>
            <value>
                <fullName>Copper Broadband – New BB Order</fullName>
            </value>
            <value>
                <fullName>FIOS Broadband – New BB Order</fullName>
            </value>
            <value>
                <fullName>No Broadband Sold</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Vantage Broadband – New BB Order</fullName>
                <isActive>false</isActive>
                <label>Vantage Broadband – New BB Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>