UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burnsville, MN</fullName>
            </value>
            <value>
                <fullName>Charleston, WV</fullName>
            </value>
            <value>
                <fullName>Ft. Wayne, IN</fullName>
            </value>
            <value>
                <fullName>Kingman, AZ</fullName>
            </value>
            <value>
                <fullName>Pomona, CA</fullName>
            </value>
            <value>
                <fullName>Tampa, FL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>