UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inbound Items</relationshipLabel>
    <relationshipName>Inbound_Items</relationshipName>
    <type>Lookup</type>
</CustomField>