UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Customer_Objection__c.field-meta.xml
<CustomField>
    <fullName>Customer_Objection__c</fullName>
    <label>Customer Objection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Objection</fullName>
            </value>
            <value>
                <fullName>Cancel COVID-19</fullName>
            </value>
            <value>
                <fullName>Changing to Competition – AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Changing to Competition – Cox Communications</fullName>
            </value>
            <value>
                <fullName>Changing to Competition – Other; Add to Comments</fullName>
            </value>
            <value>
                <fullName>Changing to Competition – Spectrum/Charter</fullName>
            </value>
            <value>
                <fullName>Changing to Competition – TimeWarner</fullName>
            </value>
            <value>
                <fullName>Competition Price is Better</fullName>
            </value>
            <value>
                <fullName>Competition Speed is Faster</fullName>
            </value>
            <value>
                <fullName>Customer Doesn’t Use Internet</fullName>
            </value>
            <value>
                <fullName>Due Date Too Far Out</fullName>
            </value>
            <value>
                <fullName>Need to Think About It</fullName>
            </value>
            <value>
                <fullName>Not authorized to make decision</fullName>
            </value>
            <value>
                <fullName>Order on hold for follow up</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Speed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>