UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Did_You_Hear_a_Marketing_Whisper__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Hear_a_Marketing_Whisper__c</fullName>
    <label>Did You Hear a Marketing Whisper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>