UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Integration_Key_Inbound_Item__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Inbound_Item__c</fullName>
    <description>Integration ID / Key used to uniquely connect Salesforce to another system (e.g. ERP Financial system)</description>
    <externalId>true</externalId>
    <inlineHelpText>Integration ID / Key used to uniquely connect Salesforce to another system (e.g. ERP Financial system)</inlineHelpText>
    <label>Integration Key (Inbound Item)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>