UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Inbound Items</relationshipLabel>
    <relationshipName>Inbound_Items</relationshipName>
    <type>Lookup</type>
</CustomField>