UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/MQO_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MQO_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MQO Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Inbound Items</relationshipLabel>
    <relationshipName>Inbound_Items</relationshipName>
    <type>Lookup</type>
</CustomField>