UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/MQO_Details__c.field-meta.xml
<CustomField>
    <fullName>MQO_Details__c</fullName>
    <label>MQO Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>