UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/MQO_Source__c.field-meta.xml
<CustomField>
    <fullName>MQO_Source__c</fullName>
    <label>MQO Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018 Lit Building Promotion</fullName>
            </value>
            <value>
                <fullName>BidNet - CPE</fullName>
            </value>
            <value>
                <fullName>Branded Paid Search</fullName>
            </value>
            <value>
                <fullName>Cart Submission</fullName>
            </value>
            <value>
                <fullName>ChoiceConvention2017</fullName>
            </value>
            <value>
                <fullName>CJIS - CPE</fullName>
            </value>
            <value>
                <fullName>CNL Disconnect Campaign</fullName>
            </value>
            <value>
                <fullName>Cold Call/Outbound</fullName>
            </value>
            <value>
                <fullName>Cold Calling</fullName>
            </value>
            <value>
                <fullName>Contact Aggregator/List Upload</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>Content Form</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Costar - MDU</fullName>
            </value>
            <value>
                <fullName>CoStar - MDU – Expansion</fullName>
            </value>
            <value>
                <fullName>Costar - MTU</fullName>
            </value>
            <value>
                <fullName>CPE – Avaya</fullName>
            </value>
            <value>
                <fullName>CPE – BidNet</fullName>
            </value>
            <value>
                <fullName>CPE - CJIS</fullName>
            </value>
            <value>
                <fullName>CPE Maintenance Renewal</fullName>
            </value>
            <value>
                <fullName>CPE – Maintenance Renewal</fullName>
            </value>
            <value>
                <fullName>CPE – MarketSource</fullName>
            </value>
            <value>
                <fullName>CPE – Phone / Hotline</fullName>
            </value>
            <value>
                <fullName>CPE – Warranty Expiration</fullName>
            </value>
            <value>
                <fullName>Customer - Alt Channel</fullName>
            </value>
            <value>
                <fullName>Demo Examples</fullName>
            </value>
            <value>
                <fullName>Direct Traffic</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>eRate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>