UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Number_of_Voice_lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Voice_lines__c</fullName>
    <label>Number of Voice lines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>