UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Sift_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Sift_Ticket__c</fullName>
    <label>Sift Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>