UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/SMB_Products__c.field-meta.xml
<CustomField>
    <fullName>SMB_Products__c</fullName>
    <label>SMB Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice Product - Ring Central</fullName>
            </value>
            <value>
                <fullName>Voice Product - Business Voice</fullName>
            </value>
            <value>
                <fullName>Voice Product - SmartVoice</fullName>
            </value>
            <value>
                <fullName>Voice Product - OneVoice</fullName>
            </value>
            <value>
                <fullName>Premium Tech Pro</fullName>
            </value>
            <value>
                <fullName>Secure Pro</fullName>
            </value>
            <value>
                <fullName>Wireless Internet Backup</fullName>
            </value>
            <value>
                <fullName>Fiber 500mb</fullName>
            </value>
            <value>
                <fullName>Fiber 700mmb</fullName>
            </value>
            <value>
                <fullName>Fiber 1gb</fullName>
            </value>
            <value>
                <fullName>Fiber 2gb</fullName>
            </value>
            <value>
                <fullName>HSI 3m</fullName>
            </value>
            <value>
                <fullName>HSI 12m</fullName>
            </value>
            <value>
                <fullName>HSI 45m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>