UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/Speed_of_Internet_Sold__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Internet_Sold__c</fullName>
    <label>Speed of Internet Sold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FiOS 1000 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 100 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 2000 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 200 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 300 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 500 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 700 DIP</fullName>
            </value>
            <value>
                <fullName>FiOS 75 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 115 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 12 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 18 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 25 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 35 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 3 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 45 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 6 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 70 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 90 DIP</fullName>
            </value>
            <value>
                <fullName>Internet 9 DIP</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No Broadband Sold</fullName>
            </value>
            <value>
                <fullName>Internet 1 DIP</fullName>
                <isActive>false</isActive>
                <label>Internet 1 DIP</label>
            </value>
            <value>
                <fullName>Internet 1000 DIP</fullName>
                <isActive>false</isActive>
                <label>Internet 1000 DIP</label>
            </value>
            <value>
                <fullName>Internet 2000 DIP</fullName>
                <isActive>false</isActive>
                <label>Internet 2000 DIP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>