UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>UTM_Term Field Requested by Lee, Junewon</description>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>