UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/recordTypes/ENT.recordType-meta.xml
<RecordType>
    <fullName>ENT</fullName>
    <active>true</active>
    <label>ENT</label>
</RecordType>