UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/recordTypes/SMB.recordType-meta.xml
<RecordType>
    <fullName>SMB</fullName>
    <active>true</active>
    <label>SMB</label>
</RecordType>