UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/validationRules/DPIOrderNumber_Not_Less_Than_Six_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>DPIOrderNumber_Not_Less_Than_Six_Digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(DPI_Order_Number__c)),
LEN(TEXT(DPI_Order_Number__c))&lt;&gt;0,
OR(LEN(TEXT(DPI_Order_Number__c))&lt;6,
LEN(TEXT(DPI_Order_Number__c))&gt;8)
)</errorConditionFormula>
    <errorDisplayField>DPI_Order_Number__c</errorDisplayField>
    <errorMessage>Please enter the correct DPI number (6 - 8 digits long)</errorMessage>
</ValidationRule>