UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/validationRules/Valid_ANI_format_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_ANI_format_is_required</fullName>
    <active>false</active>
    <description>Valid ANI format is required (###-###-####)</description>
    <errorConditionFormula>AND((MID( ANI__c , 4, 1)&lt;&gt;&quot;-&quot;) || (MID( ANI__c , 8, 1)&lt;&gt;&quot;-&quot;) || (LEN(TRIM(ANI__c))&gt;12 ),  NOT(ISBLANK(ANI__c )))</errorConditionFormula>
    <errorDisplayField>ANI__c</errorDisplayField>
    <errorMessage>Valid ANI format is required (###-###-####)</errorMessage>
</ValidationRule>