UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/listViews/X1_My_Inbound_Tracker2.listView-meta.xml
<ListView>
    <fullName>X1_My_Inbound_Tracker2</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>ANI__c</columns>
    <columns>DPI_Order_Number__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Center_Location__c</columns>
    <columns>Sift_Ticket__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>1-My Inbound Tracker</label>
</ListView>