UCF-APR2.4/ftr main/force-app/main/default/objects/Inbound_Item__c/listViews/X5_All_Inbound_Item_Form_Fills_Queue.listView-meta.xml
<ListView>
    <fullName>X5_All_Inbound_Item_Form_Fills_Queue</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>ANI__c</columns>
    <columns>DPI_Order_Number__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Center_Location__c</columns>
    <columns>Sift_Ticket__c</columns>
    <columns>Date__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inbound_Item__c.SMB</value>
    </filters>
    <label>5-All Inbound Item (Form Fills Queue)</label>
    <queue>Commercial_Form_Fills</queue>
</ListView>